update index.html title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170514" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>spring-grow &#x2013; What the hank?</title>
+    <title>spring-grow &#x2013; Introduction</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -74,7 +74,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 --><div class="section">
-<h2><a name="What_the_hank"></a>What the hank?</h2>
+<h2><a name="What_the_hank"></a>Introduction</h2>
 <p>Spring Grow is a Maven Archetype that creates a maven project for building a secured web application using Spring Web MVC Framework and Spring XML based configuration. If you need to quickly start up a template of a Spring MVC web application that is secured with Spring Security then this archetype is a good starting point.</p>
 <p><b>Technological features:</b></p>
 
