--- a/sitemap.html
+++ b/sitemap.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Date-Revision-yyyymmdd" content="20170524" />
     <meta http-equiv="Content-Language" content="en" />
-    <title>spring-grow &#x2013; CI Management</title>
+    <title>spring-grow &#x2013; Sitemap</title>
     <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
@@ -43,22 +43,10 @@
             <li class="nav-header">Overview</li>
     <li><a href="index.html" title="Introduction"><span class="none"></span>Introduction</a>  </li>
     <li><a href="changelog.html" title="Changelog"><span class="none"></span>Changelog</a>  </li>
-    <li><a href="sitemap.html" title="Sitemap"><span class="none"></span>Sitemap</a>  </li>
+    <li class="active"><a href="#"><span class="none"></span>Sitemap</a>
+  </li>
           <li class="nav-header">Project Documentation</li>
-    <li><a href="project-info.html" title="Project Information"><span class="icon-chevron-down"></span>Project Information</a>
-      <ul class="nav nav-list">
-    <li><a href="project-summary.html" title="Summary"><span class="none"></span>Summary</a>  </li>
-    <li><a href="team-list.html" title="Team"><span class="none"></span>Team</a>  </li>
-    <li><a href="dependency-info.html" title="Dependency Information"><span class="none"></span>Dependency Information</a>  </li>
-    <li><a href="distribution-management.html" title="Distribution Management"><span class="none"></span>Distribution Management</a>  </li>
-    <li><a href="issue-tracking.html" title="Issue Management"><span class="none"></span>Issue Management</a>  </li>
-    <li><a href="license.html" title="Licenses"><span class="none"></span>Licenses</a>  </li>
-    <li class="active"><a href="#"><span class="none"></span>CI Management</a>
-  </li>
-    <li><a href="source-repository.html" title="Source Code Management"><span class="none"></span>Source Code Management</a>  </li>
-    <li><a href="plugins.html" title="Plugins"><span class="none"></span>Plugins</a>  </li>
-      </ul>
-  </li>
+    <li><a href="project-info.html" title="Project Information"><span class="icon-chevron-right"></span>Project Information</a>  </li>
     <li><a href="project-reports.html" title="Project Reports"><span class="icon-chevron-right"></span>Project Reports</a>  </li>
   </ul>
           <hr />
@@ -73,15 +61,61 @@
         </div>
         <div id="bodyColumn"  class="span10" >
 <div class="section">
-<h2><a name="Overview"></a>Overview</h2><a name="Overview"></a>
-<p>This project uses <a class="externalLink" href="https://travis-ci.org/">Travis CI</a>.</p></div>
+<h2><a name="Sitemap"></a>Sitemap</h2>
+
+<p>This page lists all entries of the navigation menu in expanded form.</p>
+
 <div class="section">
-<h2><a name="Access"></a>Access</h2><a name="Access"></a>
-<p>The following is a link to the continuous integration system used by the project:</p>
-<div class="source"><pre class="prettyprint linenums"><a class="externalLink" href="https://travis-ci.org/alexander-perucci/spring-grow">https://travis-ci.org/alexander-perucci/spring-grow</a></pre></div></div>
 <div class="section">
-<h2><a name="Notifiers"></a>Notifiers</h2><a name="Notifiers"></a>
-<p>No notifiers are defined. Please check back at a later date.</p></div>
+<h4></h4><hr />
+</div>
+<div class="section">
+<h4><a name="Overview"></a>Overview</h4><hr />
+
+<ul>
+
+<li><a href="index.html">Introduction</a></li>
+
+<li><a href="changelog.html">Changelog</a></li>
+
+<li><a href="sitemap.html">Sitemap</a></li></ul>
+</div>
+<div class="section">
+<h4><a name="Project_Documentation"></a>Project Documentation</h4><hr />
+
+<ul>
+
+<li><a href="./project-info.html">Project Information</a>
+
+<ul>
+
+<li><a href="project-summary.html">Summary</a></li>
+
+<li><a href="team-list.html">Team</a></li>
+
+<li><a href="dependency-info.html">Dependency Information</a></li>
+
+<li><a href="distribution-management.html">Distribution Management</a></li>
+
+<li><a href="issue-tracking.html">Issue Management</a></li>
+
+<li><a href="license.html">Licenses</a></li>
+
+<li><a href="integration.html">CI Management</a></li>
+
+<li><a href="source-repository.html">Source Code Management</a></li>
+
+<li><a href="plugins.html">Plugins</a></li></ul></li>
+
+<li><a href="./project-reports.html">Project Reports</a>
+
+<ul>
+
+<li><a href="github-report.html">GitHub Report</a></li>
+
+<li><a href="invoker-report.html">Invoker Build Results</a></li>
+
+<li><a href="rat-report.html">Rat Report</a></li></ul></li></ul></div></div></div>
         </div>
       </div>
     </div>
