Publishing Site Docs for spring-grow:1.0.2-SNAPSHOT

--- a/github-report.html
+++ b/github-report.html
@@ -113,7 +113,7 @@
 <td><a class="externalLink" href="https://github.com/alexander-perucci/spring-grow/issues/11">11</a></td>
 <td>archetype resources</td>
 <td>Provide Language Selection</td>
-<td>&#160;</td>
+<td>alexander-perucci</td>
 <td>alexander-perucci</td>
 <td>closed</td>
 <td>2017-06-06</td>
